--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@solana/wallet-adapter-base": "^0.9.24",
     "@solana/wallet-adapter-phantom": "^0.9.25",
     "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
+    "@solana/wallet-adapter-wallets": "^0.19.34",
     "@solana/web3.js": "^1.98.0",
     "next": "15.3.0",
     "react": "^19.0.0",
