--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
   NEXT_TELEMETRY_DISABLED = "1"
   NODE_VERSION = "20.18.0"
   NPM_FLAGS = "--legacy-peer-deps"
+  NODE_OPTIONS = "--max_old_space_size=4096"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
@@ -30,4 +31,10 @@
   pretty_urls = true
 
 [build.processing.images]
-  compress = true 
+  compress = true
+
+[build.environment.NEXT_PUBLIC_SOLANA_RPC_URL]
+  value = "https://api.mainnet-beta.solana.com"
+
+[build.environment.NEXT_PUBLIC_JUPITER_API_URL]
+  value = "https://quote-api.jup.ag/v6" 
