--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "autoprefixer": "^10.4.19",
+    "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.38",
+    "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
