Update deployment configurations for Netlify: - Update netlify.toml with environment variables - Optimize next.config.js for deployment - Add deployment scripts to package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "netlify-build": "next build",
+    "postinstall": "npm run build",
+    "clean": "rm -rf .next out",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
