--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,8 @@
   NODE_VERSION = "20.18.0"
   NPM_FLAGS = "--legacy-peer-deps"
   NODE_OPTIONS = "--max_old_space_size=4096"
+  NEXT_PUBLIC_SOLANA_RPC_URL = "https://api.mainnet-beta.solana.com"
+  NEXT_PUBLIC_JUPITER_API_URL = "https://quote-api.jup.ag/v6"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
@@ -31,10 +33,4 @@
   pretty_urls = true
 
 [build.processing.images]
-  compress = true
-
-[build.environment.NEXT_PUBLIC_SOLANA_RPC_URL]
-  value = "https://api.mainnet-beta.solana.com"
-
-[build.environment.NEXT_PUBLIC_JUPITER_API_URL]
-  value = "https://quote-api.jup.ag/v6" 
+  compress = true 
