--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node build-static.js",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-    "netlify-build": "next build",
-    "postinstall": "npm run build",
-    "clean": "rm -rf .next out",
+    "netlify-build": "node build-static.js",
+    "clean": "if exist .next rmdir /s /q .next && if exist out rmdir /s /q out",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -27,14 +26,20 @@
     "@solana/wallet-adapter-react-ui": "^0.9.36",
     "@solana/wallet-adapter-wallets": "^0.19.34",
     "@solana/web3.js": "^1.98.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "next": "14.1.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.30",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.19",
     "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
